--- a/cpstyle.css
+++ b/cpstyle.css
@@ -160,7 +160,193 @@ h1, h2, h3, h4, h5,
 .border-top {
   border-top: 1px solid #edf0f5 !important; }
 
-
+.site-footer {
+  padding: 4em 0;
+  background: #000000; }
+  @media (min-width: 768px) {
+    .site-footer {
+      padding: 8em 0; } }
+  .site-footer .border-top {
+    border-top: 1px solid rgba(255, 255, 255, 0.1) !important; }
+  .site-footer h2, .site-footer h3, .site-footer h4, .site-footer h5 {
+    color: #fff; }
+  .site-footer a {
+    color: #fff; }
+    .site-footer a:hover {
+      color: #ff5733; }
+  .site-footer ul li {
+    margin-bottom: 10px; }
+  .site-footer .footer-heading {
+    font-size: 16px;
+    color: #818186 !important; }
+    .footer_area {
+      background: url("../images/footer.jpg") no-repeat;
+      position: relative;
+      background-size: cover;
+      background-position: center;
+      z-index: 1;
+    }
+    .footer_area:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      background-color: rgba(0, 0, 0, 0.8);
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: block;
+      z-index: -1;
+    }
+    .footer_area .footer_row {
+      padding-top: 95px;
+      padding-bottom: 50px;
+    }
+    .footer_area .footer_row .footer_about {
+      padding-bottom: 50px;
+    }
+    .footer_area .footer_row .footer_about h2 {
+      font: 400 18px "Oswald", sans-serif;
+      text-transform: uppercase;
+      color: #fff;
+      padding-bottom: 25px;
+    }
+    .footer_area .footer_row .footer_about img {
+      max-width: 100%;
+    }
+    .footer_area .footer_row ._about p {
+      font: 400 14px/26px "Oswald", sans-serif;
+      color: #fefefe;
+      padding-top: 22px;
+    }
+    .footer_area .footer_row .footer_about .socail_icon {
+      padding: 0;
+      margin: 0;
+      padding-top: 25px;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li {
+      display: inline-block;
+      list-style: none;
+      padding-left: 8px;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li:first-child {
+      padding: 0;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li a {
+      border: 2px solid #f6b60b;
+      display: block;
+      line-height: 26px;
+      width: 30px;
+      text-align: center;
+      position: relative;
+      z-index: 1;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li a:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      background: #f6b60b;
+      z-index: -1;
+      transform: scaleY(0);
+      transform-origin: 50%;
+      transition-property: transform;
+      transition-duration: 0.3s;
+      transition-timing-function: ease-out;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li a i {
+      font-size: 14px;
+      color: #fff;
+      display: inline-block;
+      padding-top: 7px;
+    }
+    .footer_area .footer_row .footer_about .socail_icon li a:hover:after, .footer_area .footer_row .footer_about .socail_icon li a:focus:after {
+      transform: scaleY(1);
+    }
+    .footer_area .footer_row .footer_about .quick_link {
+      padding: 0;
+      margin: 0;
+    }
+    .footer_area .footer_row .footer_about .quick_link li {
+      list-style: none;
+    }
+    .footer_area .footer_row .footer_about .quick_link li a {
+      font: 400 14px/28px "Roboto", sans-serif;
+      color: #fefefe;
+      position: relative;
+      padding-left: 30px;
+    }
+    .footer_area .footer_row .footer_about .quick_link li a i {
+      font-size: 14px;
+      color: #f6b60b;
+      padding-right: 20px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      transition: all 300ms linear 0s;
+    }
+    .footer_area .footer_row .footer_about .quick_link li a:hover, .footer_area .footer_row .footer_about .quick_link li a:focus {
+      color: #f6b60b;
+    }
+    .footer_area .footer_row .footer_about .quick_link li a:hover i, .footer_area .footer_row .footer_about .quick_link li a:focus i {
+      left: 8px;
+    }
+    .footer_area .footer_row .footer_about .twitter {
+      font: 400 14px/28px "Roboto", sans-serif;
+      color: #fefefe;
+      display: block;
+      padding-bottom: 15px;
+    }
+    .footer_area .footer_row .footer_about .twitter:hover, .footer_area .footer_row .footer_about .twitter:focus {
+      color: #f6b60b;
+    }
+    .footer_area .footer_row .footer_about address p {
+      font: 400 14px/28px "Roboto", sans-serif;
+      color: #fff;
+      padding: 0;
+    }
+    .footer_area .footer_row .footer_about address .my_address {
+      padding: 0;
+      margin: 0;
+      padding-top: 15px;
+    }
+    .footer_area .footer_row .footer_about address .my_address li {
+      list-style: none;
+    }
+    .footer_area .footer_row .footer_about address .my_address li a {
+      font: 400 14px/28px "Roboto", sans-serif;
+      color: #fff;
+    }
+    .footer_area .footer_row .footer_about address .my_address li a i {
+      color: #f6b60b;
+      padding-right: 20px;
+      font-size: 14px;
+      display: inline-block;
+    }
+    .footer_area .footer_row .footer_about address .my_address li a:hover, .footer_area .footer_row .footer_about address .my_address li a:focus {
+      color: #f6b60b;
+    }
+    .footer_area .footer_row .footer_about address .my_address li span {
+      display: inline-block;
+      padding-left: 35px;
+      margin-top: -30px;
+    }
+    .footer_area .copyright_area {
+      background: #090909;
+      font: 400 14px/100px "Roboto", sans-serif;
+      color: #fefefe;
+      text-align: center;
+    }
+    .footer_area .copyright_area a {
+      font-weight: 700;
+      font-size: 14px;
+      text-transform: uppercase;
+      color: #f6b60b;
+    }
+    .footer_area .copyright_area a:hover, .footer_area .copyright_area a:focus {
+      color: #fefefe;
+    }
 .bg-text-line {
   display: inline;
   background: #000;
@@ -224,7 +410,28 @@ h1, h2, h3, h4, h5,
   .display-1, .display-3 {
     font-size: 3rem; } }
 
-
+.play-single-big {
+  width: 90px;
+  height: 90px;
+  display: inline-block;
+  border: 2px solid #fff;
+  color: #fff !important;
+  border-radius: 50%;
+  position: relative;
+  -webkit-transition: .3s all ease-in-out;
+  -o-transition: .3s all ease-in-out;
+  transition: .3s all ease-in-out; }
+  .play-single-big > span {
+    font-size: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-40%, -50%);
+    -ms-transform: translate(-40%, -50%);
+    transform: translate(-40%, -50%); }
+  .play-single-big:hover {
+    width: 120px;
+    height: 120px; }
 
 .overlap-to-top {
   margin-top: -150px; }
@@ -250,6 +457,27 @@ h1, h2, h3, h4, h5,
   .ul-check.primary li:before {
     color: #ff5733; }
 
+.program h2 {
+  font-size: 1.5rem; }
+
+.program .border-top {
+  border-top: 1px solid #383b4f !important; }
+
+.program .border-bottom {
+  border-bottom: 1px solid #383b4f !important; }
+
+.blog-entry h2 {
+  font-size: 20px; }
+  .blog-entry h2 a {
+    color: #fff; }
+
+.blog-entry .post-meta {
+  font-size: 14px; }
+  .blog-entry .post-meta a {
+    color: #ff5733; }
+  .blog-entry .post-meta img {
+    width: 36px;
+    border-radius: 50%; }
 
 /* Navbar */
 .site-navbar {
@@ -587,6 +815,170 @@ h1, h2, h3, h4, h5,
     @media (min-width: 768px) {
       .site-hero .caption {
         font-size: 1.7rem; } }
+
+.btn-custom {
+  text-transform: uppercase;
+  color: #fff !important;
+  background: #3f4046;
+  padding: 16px 30px;
+  display: inline-block;
+  letter-spacing: .2em;
+  position: relative; }
+  .btn-custom > span {
+    position: relative;
+    z-index: 2; }
+  .btn-custom:before {
+    background: -webkit-gradient(linear, left top, right top, from(#00dffe), color-stop(70%, #ff5733));
+    background: -webkit-linear-gradient(left, #00dffe, #ff5733 70%);
+    background: -o-linear-gradient(left, #00dffe, #ff5733 70%);
+    background: linear-gradient(to right, #00dffe, #ff5733 70%);
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    width: 0;
+    -webkit-transition: .3s all ease-in-out;
+    -o-transition: .3s all ease-in-out;
+    transition: .3s all ease-in-out;
+    z-index: 1; }
+  .btn-custom:hover:before {
+    width: 100%; }
+
+.coordinator img {
+  max-width: 50px;
+  border-radius: 50%; }
+
+.speaker {
+  margin-bottom: 50px; }
+  .speaker .name {
+    left: -80px;
+    position: relative; }
+    @media (max-width: 1199.98px) {
+      .speaker .name {
+        left: 0; } }
+
+.testimony {
+  max-width: 480px; 
+ padding: 30px;
+margin-left: 0px;}
+  .testimony figure {
+    margin-bottom: 40px;
+    text-align: center; }
+    .testimony figure img {
+      margin: 0 auto;
+      max-width: 150px;
+      border-radius: 50%; }
+  .testimony .author {
+    margin-top: 50px;
+    color: #fff; }
+  .testimony .text-muted {
+    color: #e9e9ea; }
+
+.form-group .form-control {
+  color: #fff !important;
+  background: none;
+  border: 2px solid #fff; }
+  .form-group .form-control:active, .form-group .form-control:focus {
+    background: none; }
+
+.pricing {
+  border: 2px solid #ff5733;
+  padding: 30px; }
+  .pricing h2 {
+    font-size: 26px;
+    color: #fff;
+    margin-bottom: 30px; }
+  .pricing .amount {
+    color: #ff5733;
+    margin-bottom: 30px; }
+    .pricing .amount sup {
+      top: -30px;
+      font-size: 18px; }
+    .pricing .amount .number {
+      font-size: 3rem; }
+  .pricing ul li {
+    margin-bottom: 10px; }
+
+.block-13, .slide-one-item {
+  position: relative;
+  z-index: 1; }
+  .block-13 .owl-nav, .slide-one-item .owl-nav {
+    position: relative;
+    position: absolute;
+    bottom: -90px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%); }
+    .block-13 .owl-nav .owl-prev, .block-13 .owl-nav .owl-next, .slide-one-item .owl-nav .owl-prev, .slide-one-item .owl-nav .owl-next {
+      position: relative;
+      display: inline-block;
+      padding: 20px;
+      font-size: 30px;
+      color: #000; }
+      .block-13 .owl-nav .owl-prev.disabled, .block-13 .owl-nav .owl-next.disabled, .slide-one-item .owl-nav .owl-prev.disabled, .slide-one-item .owl-nav .owl-next.disabled {
+        opacity: .2; }
+
+.slide-one-item.home-slider .owl-nav {
+  position: absolute !important;
+  top: 50% !important;
+  bottom: auto !important;
+  width: 100%; }
+
+.slide-one-item.home-slider .owl-prev {
+  left: 10px !important; }
+
+.slide-one-item.home-slider .owl-next {
+  right: 10px !important; }
+
+.slide-one-item.home-slider .owl-prev, .slide-one-item.home-slider .owl-next {
+  color: #fff;
+  position: absolute !important;
+  top: 50%;
+  padding: 0px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-transition: .3s all ease-in-out;
+  -o-transition: .3s all ease-in-out;
+  transition: .3s all ease-in-out;
+  line-height: 0;
+  text-align: center;
+  font-size: 25px; }
+  @media (min-width: 768px) {
+    .slide-one-item.home-slider .owl-prev, .slide-one-item.home-slider .owl-next {
+      font-size: 25px; } }
+  .slide-one-item.home-slider .owl-prev > span, .slide-one-item.home-slider .owl-next > span {
+    position: absolute;
+    line-height: 0;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+  .slide-one-item.home-slider .owl-prev:hover, .slide-one-item.home-slider .owl-prev:focus, .slide-one-item.home-slider .owl-next:hover, .slide-one-item.home-slider .owl-next:focus {
+    background: black; }
+
+.slide-one-item.home-slider:hover .owl-nav, .slide-one-item.home-slider:focus .owl-nav, .slide-one-item.home-slider:active .owl-nav {
+  opacity: 10;
+  visibility: visible; }
+
+.custom-pagination a, .custom-pagination span {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px; }
+  .magnific-img img {
+    width: 100%;
+    height: auto;
+    margin: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .mfp-bottom-bar,*{
    font-family: 'Abel', sans-serif;
